@@ -1,3 +1,21 @@
+/*
+ *    GeoTools - The Open Source Java GIS Toolkit
+ *    http://geotools.org
+ *
+ *    (C) 2019, Open Source Geospatial Foundation (OSGeo)
+ *
+ *    This library is free software; you can redistribute it and/or
+ *    modify it under the terms of the GNU Lesser General Public
+ *    License as published by the Free Software Foundation;
+ *    version 2.1 of the License.
+ *
+ *    This library is distributed in the hope that it will be useful,
+ *    but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ *    Lesser General Public License for more details.
+ *
+ */
+
 package org.geotools.maven.xmlcodegen;
 
 import java.io.File;
@@ -146,7 +164,7 @@ public class SchemaGeneratorMojo extends AbstractGeneratorMojo {
 		        getLog().info("Loading import schema: " + schemaClassName);
 		        Schema gtSchema = null;
 		        try {
-                    gtSchema = (Schema) schemaClass.newInstance();
+                    gtSchema = (Schema) schemaClass.getDeclaredConstructor().newInstance();
                 } 
 		        catch( Exception e ) {
 		            getLog().error("Could not insantiate class: " + schemaClass.getName());
