@@ -1,3 +1,21 @@
+/*
+ *    GeoTools - The Open Source Java GIS Toolkit
+ *    http://geotools.org
+ *
+ *    (C) 2019, Open Source Geospatial Foundation (OSGeo)
+ *
+ *    This library is free software; you can redistribute it and/or
+ *    modify it under the terms of the GNU Lesser General Public
+ *    License as published by the Free Software Foundation;
+ *    version 2.1 of the License.
+ *
+ *    This library is distributed in the hope that it will be useful,
+ *    but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ *    Lesser General Public License for more details.
+ *
+ */
+
 package org.geotools.tutorial.process;
 
 import static org.junit.Assert.assertEquals;
@@ -76,7 +94,7 @@ public class ProcessExample {
         WKTReader reader = new WKTReader(new GeometryFactory());
 
         Geometry geom1 = (Polygon) reader.read("POLYGON((20 10, 30 0, 40 10, 30 20, 20 10))");
-        Double buffer = new Double(213.78);
+        Double buffer = Double.valueOf(213.78);
 
         Map<String, Object> map = new HashMap<>();
         map.put(BufferFactory.GEOM1.key, geom1);
