@@ -34,6 +34,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import javax.xml.namespace.QName;
+import org.geotools.appschema.filter.FilterFactoryImplNamespaceAware;
 import org.geotools.data.DataAccess;
 import org.geotools.data.DataAccessFinder;
 import org.geotools.data.DataUtilities;
@@ -42,20 +43,20 @@ import org.geotools.data.complex.AppSchemaDataAccess;
 import org.geotools.data.complex.AttributeMapping;
 import org.geotools.data.complex.FeatureTypeMapping;
 import org.geotools.data.complex.TestData;
-import org.geotools.data.complex.config.Types;
-import org.geotools.data.complex.filter.XPathUtil.Step;
-import org.geotools.data.complex.filter.XPathUtil.StepList;
+import org.geotools.data.complex.feature.type.Types;
+import org.geotools.data.complex.feature.type.UniqueNameFeatureTypeFactoryImpl;
+import org.geotools.data.complex.util.XPathUtil.Step;
+import org.geotools.data.complex.util.XPathUtil.StepList;
 import org.geotools.data.memory.MemoryDataStore;
 import org.geotools.factory.CommonFactoryFinder;
 import org.geotools.feature.FeatureCollection;
 import org.geotools.feature.FeatureIterator;
 import org.geotools.feature.NameImpl;
 import org.geotools.feature.TypeBuilder;
-import org.geotools.feature.type.UniqueNameFeatureTypeFactoryImpl;
-import org.geotools.filter.FilterFactoryImplNamespaceAware;
 import org.geotools.filter.IsEqualsToImpl;
 import org.geotools.filter.OrImpl;
 import org.geotools.filter.spatial.BBOX3DImpl;
+import org.geotools.geometry.jts.JTS;
 import org.geotools.geometry.jts.ReferencedEnvelope3D;
 import org.geotools.gml3.GML;
 import org.geotools.test.AppSchemaTestSupport;
@@ -99,7 +100,6 @@ import org.xml.sax.helpers.NamespaceSupport;
 /**
  * @author Gabriel Roldan (Axios Engineering)
  * @version $Id$
- * @source $URL$
  * @since 2.4
  */
 public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
@@ -488,7 +488,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         PropertyName attExp = (PropertyName) left;
         String expectedAtt = "results_value";
         assertEquals(expectedAtt, attExp.getPropertyName());
-        assertEquals(new Double(1.1), ((Literal) right).getValue());
+        assertEquals(Double.valueOf(1.1), ((Literal) right).getValue());
     }
 
     /**
@@ -593,7 +593,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
         assertTrue(right instanceof Literal);
 
         assertEquals("results_value", ((PropertyName) left).getPropertyName());
-        assertEquals(new Double(1.1), ((Literal) right).getValue());
+        assertEquals(Double.valueOf(1.1), ((Literal) right).getValue());
 
         Filter sourceGreater = (Filter) sourceAnd.getChildren().get(1);
         assertTrue(sourceGreater instanceof PropertyIsGreaterThan);
@@ -686,7 +686,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
 
     @Test
     public void testLiteralExpression() throws Exception {
-        Expression literal = ff.literal(new Integer(0));
+        Expression literal = ff.literal(Integer.valueOf(0));
         List unrolledExpressions = (List) literal.accept(visitor, null);
         assertEquals(1, unrolledExpressions.size());
         assertSame(literal, unrolledExpressions.get(0));
@@ -701,7 +701,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
     private void testLogicFilter(Class<?> filterType) throws Exception {
         BinaryLogicOperator complexLogicFilter;
         PropertyIsGreaterThan resultFilter =
-                ff.greater(ff.property("measurement/result"), ff.literal(new Integer(5)));
+                ff.greater(ff.property("measurement/result"), ff.literal(Integer.valueOf(5)));
 
         PropertyIsBetween determFilter =
                 ff.between(
@@ -734,7 +734,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
                 "results_value",
                 ((PropertyName) unmappedResult.getExpression1()).getPropertyName());
 
-        assertEquals(new Integer(5), ((Literal) unmappedResult.getExpression2()).getValue());
+        assertEquals(Integer.valueOf(5), ((Literal) unmappedResult.getExpression2()).getValue());
 
         assertEquals(
                 "determinand_description",
@@ -749,7 +749,7 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
 
     @Test
     public void testMathExpression() throws Exception {
-        Literal literal = ff.literal(new Integer(2));
+        Literal literal = ff.literal(Integer.valueOf(2));
         Multiply mathExp = ff.multiply(ff.property("measurement/result"), literal);
 
         List unrolledExpressions = (List) mathExp.accept(visitor, null);
@@ -789,11 +789,6 @@ public class UnmappingFilterVisitorTest extends AppSchemaTestSupport {
 
         assertTrue(unrolled instanceof BBOX3DImpl);
         BBOX3DImpl unrolled3d = (BBOX3DImpl) unrolled;
-        assertEquals(bbox3d.getMinX(), unrolled3d.getMinX(), 0.0);
-        assertEquals(bbox3d.getMaxX(), unrolled3d.getMaxX(), 0.0);
-        assertEquals(bbox3d.getMinY(), unrolled3d.getMinY(), 0.0);
-        assertEquals(bbox3d.getMaxY(), unrolled3d.getMaxY(), 0.0);
-        assertEquals(bbox3d.getMinZ(), unrolled3d.getMinZ(), 0.0);
-        assertEquals(bbox3d.getMaxZ(), unrolled3d.getMaxZ(), 0.0);
+        assertTrue(JTS.equals(bbox3d.getBounds(), unrolled3d.getBounds(), 0));
     }
 }
