@@ -21,9 +21,9 @@ import org.geotools.data.DataTestCase;
 import org.geotools.data.DataUtilities;
 import org.geotools.data.memory.MemoryDataStore;
 import org.geotools.data.simple.SimpleFeatureCollection;
-import org.geotools.feature.IllegalAttributeException;
 import org.geotools.feature.simple.SimpleFeatureBuilder;
 import org.geotools.validation.spatial.IsValidGeometryValidation;
+import org.opengis.feature.IllegalAttributeException;
 import org.opengis.feature.simple.SimpleFeature;
 
 /**
@@ -44,7 +44,6 @@ import org.opengis.feature.simple.SimpleFeature;
  *
  * @author bowens, Refractions Research, Inc.
  * @author $Author: sploreg $ (last modification)
- * @source $URL$
  * @version $Id$
  */
 public class ValidationProcessorTest extends DataTestCase {
@@ -101,7 +100,7 @@ public class ValidationProcessorTest extends DataTestCase {
             this.newRoad =
                     SimpleFeatureBuilder.build(
                             this.roadType,
-                            new Object[] {new Integer(2), line(new int[] {1, 2, 1, 2}), "r4"},
+                            new Object[] {Integer.valueOf(2), line(new int[] {1, 2, 1, 2}), "r4"},
                             "road.rd4");
         } catch (IllegalAttributeException e) {
         }
@@ -125,7 +124,7 @@ public class ValidationProcessorTest extends DataTestCase {
         /*
         String[] messages = validationResults.getFailedMessages();
         for (int i=0; i<validationResults.getFailedMessages().length; i++)
-        	System.out.println(messages[i]);
+        	// System.out.println(messages[i]);
         */
 
     }
