@@ -17,9 +17,9 @@
 package org.geotools.xs.bindings;
 
 import javax.xml.namespace.QName;
-import org.geotools.xml.InstanceComponent;
-import org.geotools.xml.SimpleBinding;
 import org.geotools.xs.XS;
+import org.geotools.xsd.InstanceComponent;
+import org.geotools.xsd.SimpleBinding;
 
 /**
  * Binding object for the type http://www.w3.org/2001/XMLSchema:short.
@@ -42,7 +42,6 @@ import org.geotools.xs.XS;
  *         </pre>
  *
  * @generated
- * @source $URL$
  */
 public class XSShortBinding implements SimpleBinding {
     /** @generated */
@@ -88,7 +87,7 @@ public class XSShortBinding implements SimpleBinding {
             text = text.substring(1);
         }
 
-        return new Short(text);
+        return Short.valueOf(text);
     }
 
     /**
