@@ -24,7 +24,6 @@ import java.io.IOException;
 import java.lang.reflect.Array;
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -59,9 +58,9 @@ import org.geotools.data.simple.SimpleFeatureLocking;
 import org.geotools.data.simple.SimpleFeatureReader;
 import org.geotools.data.simple.SimpleFeatureSource;
 import org.geotools.data.simple.SimpleFeatureStore;
+import org.geotools.data.util.NullProgressListener;
 import org.geotools.data.view.DefaultView;
 import org.geotools.factory.CommonFactoryFinder;
-import org.geotools.factory.Hints;
 import org.geotools.feature.AttributeImpl;
 import org.geotools.feature.AttributeTypeBuilder;
 import org.geotools.feature.DefaultFeatureCollection;
@@ -87,9 +86,8 @@ import org.geotools.metadata.iso.citation.Citations;
 import org.geotools.referencing.CRS;
 import org.geotools.styling.UserLayer;
 import org.geotools.util.Converters;
-import org.geotools.util.NullProgressListener;
-import org.geotools.util.URLs;
 import org.geotools.util.Utilities;
+import org.geotools.util.factory.Hints;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryCollection;
@@ -190,9 +188,6 @@ import org.opengis.util.ProgressListener;
  * </ul>
  *
  * @author Jody Garnett, Refractions Research
- * @source $URL$
- *     http://svn.osgeo.org/geotools/trunk/modules/library/main/src/main/java/org/geotools/
- *     data/DataUtilities.java $
  */
 public class DataUtilities {
     /** Typemap used by {@link #createType(String, String)} methods */
@@ -234,27 +229,43 @@ public class DataUtilities {
 
         typeEncode.put(Geometry.class, "Geometry");
         typeMap.put("Geometry", Geometry.class);
+        typeMap.put("com.vividsolutions.jts.geom.Geometry", Geometry.class);
+        typeMap.put("org.locationtech.jts.geom.Geometry", Geometry.class);
 
         typeEncode.put(Point.class, "Point");
         typeMap.put("Point", Point.class);
+        typeMap.put("com.vividsolutions.jts.geom.Point", Point.class);
+        typeMap.put("org.locationtech.jts.geom.Point", Point.class);
 
         typeEncode.put(LineString.class, "LineString");
         typeMap.put("LineString", LineString.class);
+        typeMap.put("com.vividsolutions.jts.geom.LineString", LineString.class);
+        typeMap.put("org.locationtech.jts.geom.LineString", LineString.class);
 
         typeEncode.put(Polygon.class, "Polygon");
         typeMap.put("Polygon", Polygon.class);
+        typeMap.put("com.vividsolutions.jts.geom.Polygon", Polygon.class);
+        typeMap.put("org.locationtech.jts.geom.Polygon", Polygon.class);
 
         typeEncode.put(MultiPoint.class, "MultiPoint");
         typeMap.put("MultiPoint", MultiPoint.class);
+        typeMap.put("com.vividsolutions.jts.geom.MultiPoint", MultiPoint.class);
+        typeMap.put("org.locationtech.jts.geom.MultiPoint", MultiPoint.class);
 
         typeEncode.put(MultiLineString.class, "MultiLineString");
         typeMap.put("MultiLineString", MultiLineString.class);
+        typeMap.put("com.vividsolutions.jts.geom.MultiLineString", MultiLineString.class);
+        typeMap.put("org.locationtech.jts.geom.MultiLineString", MultiLineString.class);
 
         typeEncode.put(MultiPolygon.class, "MultiPolygon");
         typeMap.put("MultiPolygon", MultiPolygon.class);
+        typeMap.put("com.vividsolutions.jts.geom.MultiPolygon", MultiPolygon.class);
+        typeMap.put("org.locationtech.jts.geom.MultiPolygon", MultiPolygon.class);
 
         typeEncode.put(GeometryCollection.class, "GeometryCollection");
         typeMap.put("GeometryCollection", GeometryCollection.class);
+        typeMap.put("com.vividsolutions.jts.geom.GeometryCollection", GeometryCollection.class);
+        typeMap.put("org.locationtech.jts.geom.GeometryCollection", GeometryCollection.class);
 
         typeEncode.put(Date.class, "Date");
         typeMap.put("Date", Date.class);
@@ -273,16 +284,6 @@ public class DataUtilities {
             names[i] = featureType.getDescriptor(i).getLocalName();
         }
         return names;
-    }
-
-    /** @deprecated Use {@link URLs#fileToUrl(File)} */
-    public static URL fileToURL(File file) {
-        return URLs.fileToUrl(file);
-    }
-
-    /** @deprecated Use {@link URLs#urlToFile(URL)} */
-    public static File urlToFile(URL url) {
-        return URLs.urlToFile(url);
     }
 
     /**
@@ -426,9 +427,7 @@ public class DataUtilities {
 
             if (isMatch(a, typeB.getDescriptor(i))) {
                 match++;
-            } else if (isMatch(a, typeB.getDescriptor(a.getLocalName()))) {
-                // match was found in a different position
-            } else {
+            } else if (!isMatch(a, typeB.getDescriptor(a.getLocalName()))) {
                 // cannot find any match for Attribute in typeA
                 return -1;
             }
@@ -546,7 +545,6 @@ public class DataUtilities {
         String id = feature.getID();
         int numAtts = featureType.getAttributeCount();
         Object[] attributes = new Object[numAtts];
-        String xpath;
 
         for (int i = 0; i < numAtts; i++) {
             AttributeDescriptor curAttType = featureType.getDescriptor(i);
@@ -781,28 +779,8 @@ public class DataUtilities {
     }
 
     /**
-     * Provides a defautlValue for attributeType.
-     *
-     * <p>Will return null if attributeType isNillable(), or attempt to use Reflection, or
-     * attributeType.parse( null )
-     *
-     * @param attributeType
-     * @return null for nillable attributeType, attempt at reflection
-     * @deprecated Please {@link AttributeDescriptor#getDefaultValue()}
-     */
-    public static Object defaultValue(AttributeDescriptor attributeType)
-            throws IllegalAttributeException {
-        Object value = attributeType.getDefaultValue();
-
-        if (value == null && !attributeType.isNillable()) {
-            return null; // sometimes there is no valid default value :-(
-        }
-        return value;
-    }
-
-    /**
      * Returns a non-null default value for the class that is passed in. This is a helper class an
-     * can't create a default class for any type but it does support:
+     * can't create a default class for all types but it does support:
      *
      * <ul>
      *   <li>String
@@ -822,6 +800,7 @@ public class DataUtilities {
      *   <li>java.sql.Time
      *   <li>java.util.Date
      *   <li>JTS Geometries
+     *   <li>Arrays - will return an empty array of the appropriate type
      * </ul>
      *
      * @param type
@@ -832,19 +811,19 @@ public class DataUtilities {
             return "";
         }
         if (type == Integer.class) {
-            return new Integer(0);
+            return Integer.valueOf(0);
         }
         if (type == Double.class) {
-            return new Double(0);
+            return Double.valueOf(0);
         }
         if (type == Long.class) {
-            return new Long(0);
+            return Long.valueOf(0);
         }
         if (type == Short.class) {
-            return new Short((short) 0);
+            return Short.valueOf((short) 0);
         }
         if (type == Float.class) {
-            return new Float(0.0f);
+            return Float.valueOf(0.0f);
         }
         if (type == BigDecimal.class) {
             return BigDecimal.valueOf(0);
@@ -853,7 +832,7 @@ public class DataUtilities {
             return BigInteger.valueOf(0);
         }
         if (type == Character.class) {
-            return new Character(' ');
+            return Character.valueOf(' ');
         }
         if (type == Boolean.class) {
             return Boolean.FALSE;
@@ -904,6 +883,13 @@ public class DataUtilities {
             return fac.createMultiPolygon(new Polygon[] {polygon});
         }
 
+        if (type.isArray()) {
+            return Array.newInstance(type.getComponentType(), 0);
+        }
+        if (type == Geometry.class) { // return a point as default coordinate
+            return fac.createGeometry(point);
+        }
+
         throw new IllegalArgumentException(type + " is not supported by this method");
     }
 
@@ -913,7 +899,6 @@ public class DataUtilities {
      * @param features Array of features
      * @return FeatureReader<SimpleFeatureType, SimpleFeature> spaning provided feature array
      * @throws IOException If provided features Are null or empty
-     * @throws NoSuchElementException DOCUMENT ME!
      */
     public static FeatureReader<SimpleFeatureType, SimpleFeature> reader(
             final SimpleFeature[] features) throws IOException {
@@ -1121,7 +1106,7 @@ public class DataUtilities {
      *
      * <p>Often used when gathering a SimpleFeatureCollection into memory.
      *
-     * @param SimpleFeatureCollection the features to add to a new feature collection.
+     * @param featureCollection the features to add to a new feature collection.
      * @return FeatureCollection
      */
     public static DefaultFeatureCollection collection(
@@ -1339,7 +1324,11 @@ public class DataUtilities {
                 SimpleFeatureTypeBuilder build = new SimpleFeatureTypeBuilder();
                 build.setName(featureType.getName());
                 build.setAttributes(simpleAttributes);
-                build.setDefaultGeometry(featureType.getGeometryDescriptor().getLocalName());
+
+                GeometryDescriptor defaultGeometry = featureType.getGeometryDescriptor();
+                if (defaultGeometry != null) {
+                    build.setDefaultGeometry(defaultGeometry.getLocalName());
+                }
 
                 simpleFeatureType = build.buildFeatureType();
             }
@@ -1925,45 +1914,6 @@ public class DataUtilities {
     }
 
     /**
-     * A "quick" String representation of a FeatureType.
-     *
-     * <p>This string representation may be used with createType( name, spec ).
-     *
-     * @param featureType FeatureType to represent
-     * @return The string "specification" for the featureType
-     * @deprecated Renamed to {@link #encodeType} for concistency with {@link #createType}
-     */
-    public static String spec(FeatureType featureType) {
-        Collection<PropertyDescriptor> types = featureType.getDescriptors();
-        StringBuffer buf = new StringBuffer();
-
-        for (PropertyDescriptor type : types) {
-            buf.append(type.getName().getLocalPart());
-            buf.append(":");
-            buf.append(typeMap(type.getType().getBinding()));
-            if (type instanceof GeometryDescriptor) {
-                GeometryDescriptor gd = (GeometryDescriptor) type;
-                if (gd.getCoordinateReferenceSystem() != null
-                        && gd.getCoordinateReferenceSystem().getIdentifiers() != null) {
-                    for (Iterator<ReferenceIdentifier> it =
-                                    gd.getCoordinateReferenceSystem().getIdentifiers().iterator();
-                            it.hasNext(); ) {
-                        ReferenceIdentifier id = it.next();
-
-                        if ((id.getAuthority() != null)
-                                && id.getAuthority().getTitle().equals(Citations.EPSG.getTitle())) {
-                            buf.append(":srid=" + id.getCode());
-                            break;
-                        }
-                    }
-                }
-            }
-            buf.append(",");
-        }
-        buf.delete(buf.length() - 1, buf.length()); // remove last ","
-        return buf.toString();
-    }
-    /**
      * Reads in SimpleFeature that has been encoded into a line of text.
      *
      * <p>Example:
@@ -2094,7 +2044,7 @@ public class DataUtilities {
             // read the value and decode any interesting characters
             stringValue = decodeEscapedCharacters(rawText);
         } catch (RuntimeException huh) {
-            huh.printStackTrace();
+            java.util.logging.Logger.getGlobal().log(java.util.logging.Level.INFO, "", huh);
             stringValue = null;
         }
         // check for special <null> flag
@@ -2344,8 +2294,6 @@ public class DataUtilities {
      * </ul>
      *
      * @param firstQuery Query against this DataStore
-     * @param secondQuery DOCUMENT ME!
-     * @param handle DOCUMENT ME!
      * @return Query restricted to the limits of definitionQuery
      * @throws NullPointerException if some of the queries is null
      * @throws IllegalArgumentException if the type names of both queries do not match
@@ -2435,12 +2383,16 @@ public class DataUtilities {
      * This method changes the query object by simplifying the filter using SimplifyingFilterVisitor
      */
     public static Query simplifyFilter(Query query) {
-        if (query == null) {
+        if (query == null || query == Query.ALL) {
             return query;
         }
         Filter filter = SimplifyingFilterVisitor.simplify(query.getFilter());
-        query.setFilter(filter);
-        return query;
+        if (filter.equals(query.getFilter())) {
+            return query;
+        }
+        Query result = new Query(query);
+        result.setFilter(filter);
+        return result;
     }
 
     /**
@@ -2507,7 +2459,7 @@ public class DataUtilities {
      * list, and all mandatory (minoccurs > 0) added.
      *
      * @param type feature type
-     * @param propNames given list of properties
+     * @param oldProps given list of properties
      * @return list of properties including all mandatory properties
      * @throws IOException
      */
@@ -2582,7 +2534,7 @@ public class DataUtilities {
                     if (h.equals("nillable")) {
                         nillable = true;
                     }
-                    // spatial reference identieger?
+                    // spatial reference identifier
                     if (h.startsWith("srid=")) {
                         String srid = h.split("=")[1];
                         Integer.parseInt(srid);
@@ -2596,7 +2548,7 @@ public class DataUtilities {
                 }
             }
 
-            Class clazz = type(type);
+            Class<?> clazz = type(type);
             if (Geometry.class.isAssignableFrom(clazz)) {
                 GeometryType at =
                         new GeometryTypeImpl(
@@ -2605,7 +2557,7 @@ public class DataUtilities {
                                 crs,
                                 false,
                                 false,
-                                Collections.EMPTY_LIST,
+                                Collections.emptyList(),
                                 null,
                                 null);
                 return new GeometryDescriptorImpl(at, new NameImpl(name), 0, 1, nillable, null);
@@ -2616,7 +2568,7 @@ public class DataUtilities {
                                 clazz,
                                 false,
                                 false,
-                                Collections.EMPTY_LIST,
+                                Collections.emptyList(),
                                 null,
                                 null);
                 return new AttributeDescriptorImpl(at, new NameImpl(name), 0, 1, nillable, null);
@@ -2755,9 +2707,6 @@ public class DataUtilities {
      * <p>This method is intended to assist FeatureCollection implementors, and used to verify
      * test-case results. Client code should always call {@link
      * FeatureCollection#accepts(FeatureVisitor, ProgressListener)}
-     *
-     * @param collection
-     * @return bounds of features in feature collection
      */
     public static void visit(
             FeatureCollection<?, ?> collection, FeatureVisitor visitor, ProgressListener progress)
@@ -2793,23 +2742,6 @@ public class DataUtilities {
                 iterator.close();
             }
         }
-    }
-
-    /** @deprecated Use {@link URLs#changeUrlExt(URL, String)} */
-    public static URL changeUrlExt(URL url, String postfix) throws IllegalArgumentException {
-        return URLs.changeUrlExt(url, postfix);
-    }
-
-    /** @deprecated Use {@link URLs#getParentUrl(URL)}. */
-    public static URL getParentUrl(URL url) throws MalformedURLException {
-        return URLs.getParentUrl(url);
-    }
-
-    /**
-     * @deprecated Use {@link URLs#extendUrl(URL, String)
-     */
-    public static URL extendURL(URL base, String extension) throws MalformedURLException {
-        return URLs.extendUrl(base, extension);
     }
 
     /**
@@ -2851,7 +2783,7 @@ public class DataUtilities {
      * followed by the separator char if missing ({@code '/'} On UNIX systems; {@code '\\} on
      * Microsoft Windows systems.
      *
-     * @param directoryPath the input directory path. Must not be null.
+     * @param file the input file. Must not be null.
      * @return the re-formatted directory path.
      * @throws IllegalArgumentException in case the specified path doesn't rely on a
      *     existing/readable directory.
