@@ -24,13 +24,13 @@ import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
 import org.geotools.data.simple.SimpleFeatureCollection;
+import org.geotools.data.util.NullProgressListener;
 import org.geotools.feature.FeatureCollection;
 import org.geotools.feature.visitor.MaxVisitor;
 import org.geotools.feature.visitor.MinVisitor;
 import org.geotools.feature.visitor.UniqueVisitor;
 import org.geotools.filter.IllegalFilterException;
 import org.geotools.filter.capability.FunctionNameImpl;
-import org.geotools.util.NullProgressListener;
 import org.opengis.filter.capability.FunctionName;
 
 /**
@@ -38,7 +38,6 @@ import org.opengis.filter.capability.FunctionName;
  *
  * @author James Macgill
  * @author Cory Horner, Refractions Research Inc.
- * @source $URL$
  */
 public class EqualIntervalFunction extends ClassificationFunction {
 
@@ -91,6 +90,11 @@ public class EqualIntervalFunction extends ClassificationFunction {
 
     private RangedClassifier calculateNumerical(
             int classNum, Comparable globalMin, Comparable globalMax) {
+        // handle constant value case
+        if (globalMax.equals(globalMin)) {
+            return new RangedClassifier(new Comparable[] {globalMin}, new Comparable[] {globalMax});
+        }
+
         double slotWidth =
                 (((Number) globalMax).doubleValue() - ((Number) globalMin).doubleValue())
                         / classNum;
@@ -99,32 +103,34 @@ public class EqualIntervalFunction extends ClassificationFunction {
         Comparable[] localMax = new Comparable[classNum];
         for (int i = 0; i < classNum; i++) {
             // calculate the min + max values
-            localMin[i] = new Double(((Number) globalMin).doubleValue() + (i * slotWidth));
+            localMin[i] = Double.valueOf(((Number) globalMin).doubleValue() + (i * slotWidth));
             localMax[i] =
-                    new Double(
+                    Double.valueOf(
                             ((Number) globalMax).doubleValue() - ((classNum - i - 1) * slotWidth));
             // determine number of decimal places to allow
             int decPlaces = decimalPlaces(slotWidth);
             // clean up truncation error
             if (decPlaces > -1) {
-                localMin[i] = new Double(round(((Number) localMin[i]).doubleValue(), decPlaces));
-                localMax[i] = new Double(round(((Number) localMax[i]).doubleValue(), decPlaces));
+                localMin[i] =
+                        Double.valueOf(round(((Number) localMin[i]).doubleValue(), decPlaces));
+                localMax[i] =
+                        Double.valueOf(round(((Number) localMax[i]).doubleValue(), decPlaces));
             }
 
             if (i == 0) {
                 // ensure first min is less than or equal to globalMin
-                if (localMin[i].compareTo(new Double(((Number) globalMin).doubleValue())) < 0)
+                if (localMin[i].compareTo(Double.valueOf(((Number) globalMin).doubleValue())) < 0)
                     localMin[i] =
-                            new Double(
+                            Double.valueOf(
                                     fixRound(
                                             ((Number) localMin[i]).doubleValue(),
                                             decPlaces,
                                             false));
             } else if (i == classNum - 1) {
                 // ensure last max is greater than or equal to globalMax
-                if (localMax[i].compareTo(new Double(((Number) globalMax).doubleValue())) > 0)
+                if (localMax[i].compareTo(Double.valueOf(((Number) globalMax).doubleValue())) > 0)
                     localMax[i] =
-                            new Double(
+                            Double.valueOf(
                                     fixRound(
                                             ((Number) localMax[i]).doubleValue(), decPlaces, true));
             }
@@ -149,6 +155,7 @@ public class EqualIntervalFunction extends ClassificationFunction {
         Comparable[] values = (Comparable[]) result.toArray(new Comparable[result.size()]);
 
         // size arrays
+        classNum = Math.min(classNum, values.length);
         Comparable[] localMin = new Comparable[classNum];
         Comparable[] localMax = new Comparable[classNum];
 
@@ -160,7 +167,7 @@ public class EqualIntervalFunction extends ClassificationFunction {
         // instead)
 
         // calculate number of items to put in each of the larger bins
-        int binPop = new Double(Math.ceil((double) values.length / classNum)).intValue();
+        int binPop = Double.valueOf(Math.ceil((double) values.length / classNum)).intValue();
         // determine index of bin where the next bin has one less item
         int lastBigBin = values.length % classNum;
         if (lastBigBin == 0) lastBigBin = classNum;
