@@ -18,8 +18,8 @@ package org.geotools.styling;
 
 import java.util.logging.Logger;
 import org.geotools.factory.CommonFactoryFinder;
-import org.geotools.factory.GeoTools;
 import org.geotools.util.Utilities;
+import org.geotools.util.factory.GeoTools;
 import org.opengis.filter.FilterFactory;
 import org.opengis.filter.expression.Expression;
 import org.opengis.style.StyleVisitor;
@@ -30,13 +30,12 @@ import org.opengis.util.Cloneable;
  *
  * @author Ian Turton, CCG
  * @author Johann Sorel (Geomatys)
- * @source $URL$
  * @version $Id$
  */
 public class LinePlacementImpl implements LinePlacement, Cloneable {
     /** The logger for the default core module. */
     private static final Logger LOGGER =
-            org.geotools.util.logging.Logging.getLogger("org.geotools.core");
+            org.geotools.util.logging.Logging.getLogger(LinePlacementImpl.class);
 
     private FilterFactory filterFactory;
 
@@ -57,7 +56,7 @@ public class LinePlacementImpl implements LinePlacement, Cloneable {
         this.generalized = placement.isGeneralizeLine();
         this.perpendicularOffset = placement.getPerpendicularOffset();
         this.repeated = placement.isRepeated();
-        this.aligned = placement.IsAligned();
+        this.aligned = placement.isAligned();
     }
 
     public LinePlacementImpl(FilterFactory factory) {
@@ -77,12 +76,6 @@ public class LinePlacementImpl implements LinePlacement, Cloneable {
         this.generalized = generalized;
         this.aligned = aligned;
         this.repeated = repeated;
-        init();
-    }
-
-    @Deprecated
-    public void setFilterFactory(FilterFactory factory) {
-        filterFactory = factory;
         init();
     }
 
@@ -123,10 +116,6 @@ public class LinePlacementImpl implements LinePlacement, Cloneable {
 
     public boolean isRepeated() {
         return repeated;
-    }
-
-    public boolean IsAligned() {
-        return aligned;
     }
 
     public boolean isAligned() {
@@ -197,9 +186,9 @@ public class LinePlacementImpl implements LinePlacement, Cloneable {
             result = (result * PRIME) + initialGap.hashCode();
         }
 
-        result = (result * PRIME) + new Boolean(generalized).hashCode();
-        result = (result * PRIME) + new Boolean(aligned).hashCode();
-        result = (result * PRIME) + new Boolean(repeated).hashCode();
+        result = (result * PRIME) + Boolean.valueOf(generalized).hashCode();
+        result = (result * PRIME) + Boolean.valueOf(aligned).hashCode();
+        result = (result * PRIME) + Boolean.valueOf(repeated).hashCode();
 
         return result;
     }
