@@ -21,7 +21,6 @@ import org.geotools.factory.CommonFactoryFinder;
 import org.opengis.filter.FilterFactory;
 import org.opengis.filter.expression.Expression;
 
-/** @source $URL$ */
 public class AddImplTest extends TestCase {
 
     AddImpl add;
@@ -36,12 +35,12 @@ public class AddImplTest extends TestCase {
 
     public void testEvaluate() {
         Object result = add.evaluate(null);
-        assertEquals(new Double(3), result);
+        assertEquals(Double.valueOf(3), result);
     }
 
     public void testEvaluateAsInteger() {
         Object result = add.evaluate(null, Integer.class);
-        assertEquals(new Integer(3), result);
+        assertEquals(Integer.valueOf(3), result);
     }
 
     public void testEvaluateAsString() {
