@@ -40,7 +40,6 @@ import org.xml.sax.SAXException;
  *     <p>The default implementation for GeneralizationInfosProvider, reading the info from an XML
  *     file.
  *     <p>The xml schema file is "/geninfos_1.0.xsd"
- * @source $URL$
  */
 public class GeneralizationInfosProviderImpl implements GeneralizationInfosProvider {
 
@@ -176,7 +175,7 @@ public class GeneralizationInfosProviderImpl implements GeneralizationInfosProvi
 
             NamedNodeMap attrMap = distanceInfoNode.getAttributes();
 
-            Double distance = new Double(attrMap.getNamedItem(DISTANCE_ATTR).getTextContent());
+            Double distance = Double.valueOf(attrMap.getNamedItem(DISTANCE_ATTR).getTextContent());
             String featureName = attrMap.getNamedItem(FEATURE_NAME_ATTR).getTextContent();
             String geomPropertyName = null;
             if (attrMap.getNamedItem(GEOM_PROPERTY_NAME_ATTR) != null)
