@@ -19,12 +19,11 @@ package org.geotools.data.db2;
 import org.geotools.jdbc.JDBC3DOnlineTest;
 import org.geotools.jdbc.JDBC3DTestSetup;
 
-/** @source $URL$ */
 public class DB23DOnlineTest extends JDBC3DOnlineTest {
 
     @Override
     protected Integer getNativeSRID() {
-        return new Integer(DB2TestUtil.SRID);
+        return Integer.valueOf(DB2TestUtil.SRID);
     }
 
     @Override
