@@ -2,8 +2,8 @@
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
  *
- *    (C) 2001-2006  Vivid Solutions
  *    (C) 2001-2008, Open Source Geospatial Foundation (OSGeo)
+ *    (C) 2001-2006  Vivid Solutions
  *
  *    This library is free software; you can redistribute it and/or
  *    modify it under the terms of the GNU Lesser General Public
@@ -36,8 +36,6 @@ import org.geotools.geometry.iso.topograph2D.Quadrant;
  * chain for intersection. Property 2 allows binary search to be used to find the intersection
  * points of two monotone chains. For many types of real-world data, these properties eliminate a
  * large number of segment comparisons, producing substantial speed gains.
- *
- * @source $URL$
  */
 public class MonotoneChainIndexer {
 
@@ -56,10 +54,10 @@ public class MonotoneChainIndexer {
         // edge
         int start = 0;
         List startIndexList = new ArrayList();
-        startIndexList.add(new Integer(start));
+        startIndexList.add(Integer.valueOf(start));
         do {
             int last = findChainEnd(pts, start);
-            startIndexList.add(new Integer(last));
+            startIndexList.add(Integer.valueOf(last));
             start = last;
         } while (start < pts.length - 1);
         // copy list to an array of ints, for efficiency
