@@ -2,7 +2,7 @@
  *    GeoTools - The Open Source Java GIS Toolkit
  *    http://geotools.org
  *
- *     (C) 2002-2016, Open Source Geospatial Foundation (OSGeo).
+ *     (C) 2002-2016, Open Source Geospatial Foundation (OSGeo)
  *
  *    This library is free software; you can redistribute it and/or
  *    modify it under the terms of the GNU Lesser General Public
@@ -19,6 +19,7 @@ package org.geotools.data.solr;
 
 import java.io.IOException;
 import java.text.SimpleDateFormat;
+import java.util.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -26,6 +27,7 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.logging.Level;
+import java.util.stream.Collectors;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.response.QueryResponse;
@@ -43,6 +45,7 @@ import org.geotools.feature.simple.SimpleFeatureTypeBuilder;
 import org.geotools.feature.visitor.MaxVisitor;
 import org.geotools.feature.visitor.MinVisitor;
 import org.geotools.feature.visitor.NearestVisitor;
+import org.geotools.feature.visitor.UniqueVisitor;
 import org.geotools.filter.FilterAttributeExtractor;
 import org.geotools.filter.SortByImpl;
 import org.geotools.filter.visitor.PostPreProcessFilterSplittingVisitor;
@@ -65,7 +68,7 @@ import org.opengis.referencing.crs.CoordinateReferenceSystem;
 public class SolrFeatureSource extends ContentFeatureSource {
 
     /** Used to store native solr type for geometry attributes */
-    static final String KEY_SOLR_TYPE = "solr_type";
+    public static final String KEY_SOLR_TYPE = "solr_type";
 
     protected SimpleDateFormat dateFormatUTC = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'");
 
@@ -166,7 +169,7 @@ public class SolrFeatureSource extends ContentFeatureSource {
                 HttpSolrClient server = store.getSolrServer();
                 QueryResponse rsp = server.query(q);
                 count =
-                        new Long(rsp.getResults().getNumFound() - rsp.getResults().getStart())
+                        Long.valueOf(rsp.getResults().getNumFound() - rsp.getResults().getStart())
                                 .intValue();
                 // Manage max manually
                 if (query.getMaxFeatures() > 0 && query.getMaxFeatures() < Integer.MAX_VALUE) {
@@ -226,6 +229,49 @@ public class SolrFeatureSource extends ContentFeatureSource {
             }
         }
         return reader;
+    }
+
+    /**
+     * Returns a List with distinct-unique values
+     *
+     * @param query
+     * @param visitor with unique field setting
+     * @return List with distinct unique values
+     * @throws IOException
+     */
+    protected List<String> getUniqueScalarList(Query query, UniqueVisitor visitor)
+            throws IOException {
+        List<String> values;
+        try {
+            SolrDataStore store = getDataStore();
+            Filter[] split = splitFilter(query.getFilter(), this);
+            Filter preFilter = split[0];
+            Query preQuery = new Query(query);
+            preQuery.setFilter(preFilter);
+            // set start and maz results in query
+            preQuery.setStartIndex(visitor.getStartIndex());
+            preQuery.setMaxFeatures(visitor.getMaxFeatures());
+
+            HttpSolrClient solrServer = store.getSolrServer();
+            SolrQuery q = store.selectUniqueValues(getSchema(), preQuery, visitor);
+            QueryResponse rsp = solrServer.query(q);
+            values =
+                    rsp.getGroupResponse()
+                            .getValues()
+                            .stream()
+                            .filter(g -> g.getName().equals(visitor.getExpression().toString()))
+                            .flatMap(gr -> gr.getValues().stream())
+                            .map(g -> g.getGroupValue())
+                            .collect(Collectors.toList());
+
+        } catch (Throwable e) {
+            if (e instanceof Error) {
+                throw (Error) e;
+            } else {
+                throw (IOException) new IOException().initCause(e);
+            }
+        }
+        return values;
     }
 
     @Override
@@ -363,7 +409,6 @@ public class SolrFeatureSource extends ContentFeatureSource {
         Filter[] split = new Filter[2];
         if (original != null) {
             SolrFeatureSource featureSource = (SolrFeatureSource) source;
-            ;
             PostPreProcessFilterSplittingVisitor splitter =
                     new PostPreProcessFilterSplittingVisitor(
                             getDataStore().getFilterCapabilities(),
@@ -378,6 +423,12 @@ public class SolrFeatureSource extends ContentFeatureSource {
 
     @Override
     protected boolean handleVisitor(Query query, FeatureVisitor visitor) throws IOException {
+        // UniqueVisitor handling:
+        if (visitor instanceof UniqueVisitor) {
+            handleUniqueVisitor(query, (UniqueVisitor) visitor);
+            return true;
+        }
+
         // Don't do the following shortcuts if we don't request all features as that
         // might introduce subtle bugs.
         if (query.getMaxFeatures() != Integer.MAX_VALUE) {
@@ -452,5 +503,16 @@ public class SolrFeatureSource extends ContentFeatureSource {
         }
 
         return true;
+    }
+
+    /**
+     * Process UniqueVisitor with group on solr query
+     *
+     * @param query
+     * @param visitor
+     * @throws IOException
+     */
+    private void handleUniqueVisitor(Query query, UniqueVisitor visitor) throws IOException {
+        visitor.setValue(getUniqueScalarList(query, visitor));
     }
 }
